async server fn exec